test/commands/scan/binding/out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- check-reference-json / check-reference-json /  PASSED
Done
